--- a/doqmeat/music/index.html
+++ b/doqmeat/music/index.html
@@ -2,156 +2,156 @@
 <html lang="en">
 
 <head>
- <!-- coded with love by des :3 meow 
+  <!-- coded with love by des :3 meow 
  started reworking music page on 06.sep.24 / finished on 21.sep.24
  -->
- <meta charset="UTF-8">
+  <meta charset="UTF-8">
 
- <title>i luv music</title>
+  <title>i luv music</title>
 
- <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <link rel="icon" type="image/x-icon" href="/music/favicon.gif">
- <script src="https://kit.fontawesome.com/f936906ae0.js" crossorigin="anonymous"></script>
- <link href="/fonts/stylesheet.css" rel="stylesheet" type="text/css" media="all">
- <link href="body.css" rel="stylesheet" type="text/css" media="all">
- <link href="index.css" rel="stylesheet" type="text/css" media="all">
- <!-- tooltip shit -->
- <script src="https://melonking.net/scripts/frame-link.js"></script>
- <script>
-  titlePrefix = "music ♪ ";
- </script>
- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
- <script src="/!f/tooltip-jquary.js"></script>
- <script src="/!f/tooltip.js"></script>
- <!--  end of tooltip shit -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" type="image/x-icon" href="/music/favicon.gif">
+  <script src="https://kit.fontawesome.com/f936906ae0.js" crossorigin="anonymous"></script>
+  <link href="/fonts/stylesheet.css" rel="stylesheet" type="text/css" media="all">
+  <link href="body.css" rel="stylesheet" type="text/css" media="all">
+  <link href="index.css" rel="stylesheet" type="text/css" media="all">
+  <!-- tooltip shit -->
+  <script src="https://melonking.net/scripts/frame-link.js"></script>
+  <script>
+    titlePrefix = "music ♪ ";
+  </script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
+  <script src="/!f/tooltip-jquary.js"></script>
+  <script src="/!f/tooltip.js"></script>
+  <!--  end of tooltip shit -->
 
 </head>
 
 <body>
- <div id="wrapper">
-  <header id="header" class="box">
-   <h1>doqmeat's music page</h1>
-  </header>
+  <div id="wrapper">
+    <header id="header" class="box">
+      <h1>doqmeat's music page</h1>
+    </header>
 
-  <nav id="nav" class="box">
-   <a href="/">go back home</a>
-   <h3>navigation</h3>
+    <nav id="nav" class="box">
+      <a href="/">go back home</a>
+      <h3>navigation</h3>
 
-   <h4>pages</h4>
-   <a href="songs/index.html">fav artists n genres</a>
-   <a href="fav-albums.html">fav albums</a>
-   <a href="cds.html">CD collection</a>
+      <h4>pages</h4>
+      <a href="songs/index.html">fav artists n genres</a>
+      <a href="fav-albums.html">fav albums</a>
+      <a href="cds.html">CD collection</a>
 
-   <h4>mini-pages</h4>
-   <a href="info.html" target="mainframe">info</a>
-   <a href="featured.html" target="mainframe">featured music</a>
-   <a href="playlists.html" target="mainframe">playlists</a>
-   <a href="concerts/index.html" target="mainframe">concerts</a>
-   <a href="kpop-producers.html" target="mainframe">fav kpop producers</a>
-   <a href="listening-log/index.html" target="mainframe">listening logs</a>
-   <a href="recaps/index.html" target="mainframe">yearly recaps</a>
-   <a href="links.html" target="mainframe">related links</a>
+      <h4>mini-pages</h4>
+      <a href="info.html" target="mainframe">info</a>
+      <a href="featured.html" target="mainframe">featured music</a>
+      <a href="playlists.html" target="mainframe">playlists</a>
+      <a href="concerts/index.html" target="mainframe">concerts</a>
+      <a href="kpop-producers.html" target="mainframe">fav kpop producers</a>
+      <a href="listening-log/index.html" target="mainframe">listening logs</a>
+      <a href="recaps/index.html" target="mainframe">yearly recaps</a>
+      <a href="links.html" target="mainframe">related links</a>
 
-   <h4>other</h4>
-   <a title="blog post" href="/blog/2023/230912-vocaloid.html" target="_blank">my history with vocaloid</a>
+      <h4>other</h4>
+      <a title="blog post" href="/blog/2023/230912-vocaloid.html" target="_blank">my history with vocaloid</a>
 
-   <h4>profiles</h4>
-   <a href="https://rateyourmusic.com/~doqmeat" target="_blank" class="outlink">rate your music</a>
-   <a href="https://www.last.fm/user/lakiitu" target="_blank" class="outlink">last.fm</a>
-  </nav>
+      <h4>profiles</h4>
+      <a href="https://rateyourmusic.com/~doqmeat" target="_blank" class="outlink">rate your music</a>
+      <a href="https://www.last.fm/user/lakiitu" target="_blank" class="outlink">last.fm</a>
+    </nav>
 
-  <main id="frame" class="box">
-   <iframe id="mainframe" src="info.html" height="100%" width="100%" name="mainframe"></iframe>
-  </main>
+    <main id="frame" class="box">
+      <iframe id="mainframe" src="info.html" height="100%" width="100%" name="mainframe"></iframe>
+    </main>
 
-  <div id="mv" class="box"><noscript>this box is for music video "ads" but do not fear! it's just screenshots of my favorite music videos :)</noscript></div>
+    <div id="mv" class="box"><noscript>this box is for music video "ads" but do not fear! it's just screenshots of my favorite music videos :)</noscript></div>
 
-  <div id="updates" class="box">
-   <h3>updates</h3>
-   <p><b>28.feb.25</b> - new featured song &amp; album :-)</p>
-   <p><b>08.feb.25</b> - new listening log: <a href="listening-log/2025/index.html#1" target="mainframe">DeBÍ TiRAR MáS FOToS</a></p>
-   <p><b>26.jan.25</b> - added <a href="links.html" target="mainframe">related links</a> page</p>
-   <p><b>23.jan.25</b> - updated <a href="kpop-producers.html" target="mainframe">fav kpop producers</a> + added a message box where you can recommend me something and it will pop up to my e-mail!</p>
-   <p><b>17.jan.25</b> - new featured releases!</p>
-   <p><b>02.jan.25</b> - don't feel like doing a recap for last year (i didn't listen to much tbh!) so here's my <a href="https://rateyourmusic.com/list/doqmeat/2024-highlights/" target="_blank" class="outlink">2024 highlights</a> list on RYM</p>
-   <p><b>25.nov.24</b> - logged <a href="concerts/index.html" target="mainframe">billlie</a>'s concert</p>
-  </div>
+    <div id="updates" class="box">
+      <h3>updates</h3>
+      <p><b>28.feb.25</b> - new featured song &amp; album :-)</p>
+      <p><b>08.feb.25</b> - new listening log: <a href="listening-log/2025/index.html#1" target="mainframe">DeBÍ TiRAR MáS FOToS</a></p>
+      <p><b>26.jan.25</b> - added <a href="links.html" target="mainframe">related links</a> page</p>
+      <p><b>23.jan.25</b> - updated <a href="kpop-producers.html" target="mainframe">fav kpop producers</a> + added a message box where you can recommend me something and it will pop up to my e-mail!</p>
+      <p><b>17.jan.25</b> - new featured releases!</p>
+      <p><b>02.jan.25</b> - don't feel like doing a recap for last year (i didn't listen to much tbh!) so here's my <a href="https://rateyourmusic.com/list/doqmeat/2024-highlights/" target="_blank" class="outlink">2024 highlights</a> list on RYM</p>
+      <p><b>25.nov.24</b> - logged <a href="concerts/index.html" target="mainframe">billlie</a>'s concert</p>
+    </div>
 
-  <!-- <div id="log" class="box">
+    <!-- <div id="log" class="box">
    <h3>latest log...</h3>
    <iframe src="listening-log/2024/fall.html" height="100%" width="100%" scrolling="no" name="listening-log"></iframe>
    <a title="click to open listening log and continue reading!" href="listening-log/2024/fall.html" target="_blank"></a>
   </div> -->
 
-  <div id="recc" class="box">
-   <h3>recommend me music!</h3>
-   <form action="https://formspree.io/f/mrbebanw" method="POST" />
-   <textarea id="message" name="message" placeholder="write your message here! could be an album or songs." style="height:100px"></textarea>
-   <input id="submit" type="submit" value="Submit">
-   </form>
-  </div>
-
-  <div id="featured" class="box">
-   <h3>featured song &amp; album</h3>
-   <div class="song">
-    <h4><b>love lightside</b> - 2 mello</h4>
-    <iframe width="907" height="510" src="https://www.youtube.com/embed/2Gui0Tbfqjk" title="2 Mello - Love Lightside (Love Sickubus)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-    <p>2 mello has never failed me.</p>
-   </div>
-   <div class="lp">
-    <h4><b>kirara</b> - kirara</h4>
-    <iframe style="border: 0; width: 100%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/album=4082560632/size=large/bgcol=ffffff/linkcol=63b2cc/tracklist=false/artwork=small/transparent=true/" seamless><a href="https://stqpkiraradongjae.bandcamp.com/album/kirara">KIRARA by KIRARA</a></iframe>
-    <p>an insanely fun house album by korean indie artist KIRARA. i need to listen to more of her stuff. it's kinda great for studying in my experience. this is just very silly and nice to listen to. there's also a very nice selection of guest here with only 5/14 being instrumental ones at that. while still in relative the same soundscape there's a lot of variety in the songs as well.</p>
-    <p><b>highlights:</b>bird's eye view, outside earth, music, love me</p>
-   </div>
-   <hr>
-
-   <center><small>past featured music can be found <a title="will open on the iframe above!" href="featured.html#" target="mainframe">here</a></small></center>
-  </div>
-
-  <div id="poll" class="box">
-   <h3>is he listening?</h3>
-   <form method="post" action="https://poll.pollcode.com/18957215">
-    <div style="display:inline-block;padding:0px;width:135px;color:#000000;"><input type="radio" name="answer" value="1" id="answer189572151" style="float:left;" /><label for="answer189572151" style="float:left;width:110px;">yes</label>
-     <div style="clear:both;height:2px;"></div><input type="radio" name="answer" value="2" id="answer189572152" style="float:left;" /><label for="answer189572152" style="float:left;width:110px;">no</label>
-     <div style="clear:both;height:2px;"></div>
-     <div align="center" style="padding:3px;"><input type="submit" value=" Vote "></div>
+    <div id="recc" class="box">
+      <h3>recommend me music!</h3>
+      <form action="https://formspree.io/f/mrbebanw" method="POST" />
+      <textarea id="message" name="message" placeholder="write your message here! could be an album or songs." style="height:100px"></textarea>
+      <input id="submit" type="submit" value="Submit">
+      </form>
     </div>
-   </form>
+
+    <div id="featured" class="box">
+      <h3>featured song &amp; album</h3>
+      <div class="song">
+        <h4><b>ウエンディ</b> - Yoh Kamiyama</h4>
+        <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/YvNB8V1IfMY?si=7pmAQQDX1_8MkGwt" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <p>discovered through a friend's radio broadcast section: <i>miku music</i>! i love how fun it is. it honestly makes me wanna do a little dance.</p>
+      </div>
+      <div class="lp">
+        <h4><b>kirara</b> - kirara</h4>
+        <iframe style="border: 0; width: 100%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/album=4082560632/size=large/bgcol=ffffff/linkcol=63b2cc/tracklist=false/artwork=small/transparent=true/" seamless><a href="https://stqpkiraradongjae.bandcamp.com/album/kirara">KIRARA by KIRARA</a></iframe>
+        <p>an insanely fun house album by korean indie artist KIRARA. i need to listen to more of her stuff. it's kinda great for studying in my experience. this is just very silly and nice to listen to. there's also a very nice selection of guest here with only 5/14 being instrumental ones at that. while still in relative the same soundscape there's a lot of variety in the songs as well.</p>
+        <p><b>highlights:</b>bird's eye view, outside earth, music, love me</p>
+      </div>
+      <hr>
+
+      <center><small>past featured music can be found <a title="will open on the iframe above!" href="featured.html#" target="mainframe">here</a></small></center>
+    </div>
+
+    <div id="poll" class="box">
+      <h3>is he listening?</h3>
+      <form method="post" action="https://poll.pollcode.com/18957215">
+        <div style="display:inline-block;padding:0px;width:135px;color:#000000;"><input type="radio" name="answer" value="1" id="answer189572151" style="float:left;" /><label for="answer189572151" style="float:left;width:110px;">yes</label>
+          <div style="clear:both;height:2px;"></div><input type="radio" name="answer" value="2" id="answer189572152" style="float:left;" /><label for="answer189572152" style="float:left;width:110px;">no</label>
+          <div style="clear:both;height:2px;"></div>
+          <div align="center" style="padding:3px;"><input type="submit" value=" Vote "></div>
+        </div>
+      </form>
+    </div>
+
+    <div id="widgets" class="box">
+      <h3>listening to...</h3>
+      <a href="https://www.last.fm/user/lakiitu" target="_blank"><img src="https://lastfm-recently-played.vercel.app/api?user=lakiitu" height="auto" width="90%" /></a>
+    </div>
+
+    <div id="graphics" class="box">
+      <img src="https://doqmeat.com/collection/internet-graphics/!g/i_heart_music_stamp_2_by_stampmakerlkj.png" alt="i love music">
+      <img src="https://doqmeat.com/collection/internet-graphics/!g/i-still-buy-cds.png" alt="i still buy CDs">
+      <img src="https://doqmeat.com/collection/internet-graphics/!g/ipod%20repeat.gif" alt="my ipod is always on repeat">
+      <a href="https://www.tumblr.com/pileofglass/708541131552669696/made-some-88x31-buttons-for-breakbeat-fans-feel?source=share" target="_blank"><img src="/collection/internet-graphics/!g/breakbeat.gif"></a>
+      <a href="https://www.tumblr.com/cartoonishvendor/710638657066926080/drippin-themed-88x31-buttons-middle-animation-is?source=share" target="_blank"><img src="/collection/internet-graphics/!g/drippin.gif"></a>
+      <img src="/collection/internet-graphics/!g/miku.gif">
+      <a href="https://plasticdino.neocities.org/graphics" target="_blank"><img src="/collection/internet-graphics/!g/loona.gif"></a>
+      <br>
+      <img src="/collection/internet-graphics/!g/ilovethemusic.gif" style="max-width:100%;" alt="i love the music">
+    </div>
+
+    <footer id="foot" class="box">
+      <img src="/collection/internet-graphics/!g/matry.gif" alt="matryoshka gumi" style="margin:15px 5px" align="left">
+      <img src="/collection/internet-graphics/!g/orka.gif" alt="matryoshka miku" style="margin:15px 5px" align="right">
+      last updated on 28.feb.25
+      <br>
+      <b>credit:</b>
+      bg is a scan from <a title="archive.org img link" href="https://archive.org/details/yume-no-manimani-scans/13-page.png" target="_blank">siinamota's yume no manimani</a> album booklet, art by <a title="meisa's website" href="http://hathune39.web.fc2.com/" target="_blank">meisa</a>
+
+      <br>
+
+      <span class="emoji2"></span> <a href="#">top</a> <span class="emoji2"></span> <a href="/">home</a> <span class="emoji2"></span> <a href="/sitemap.html">sitemap</a> <span class="emoji2"></span>
+    </footer>
+    <!-- wrapper end div -->
   </div>
-
-  <div id="widgets" class="box">
-   <h3>listening to...</h3>
-   <a href="https://www.last.fm/user/lakiitu" target="_blank"><img src="https://lastfm-recently-played.vercel.app/api?user=lakiitu" height="auto" width="90%" /></a>
-  </div>
-
-  <div id="graphics" class="box">
-   <img src="https://doqmeat.com/collection/internet-graphics/!g/i_heart_music_stamp_2_by_stampmakerlkj.png" alt="i love music">
-   <img src="https://doqmeat.com/collection/internet-graphics/!g/i-still-buy-cds.png" alt="i still buy CDs">
-   <img src="https://doqmeat.com/collection/internet-graphics/!g/ipod%20repeat.gif" alt="my ipod is always on repeat">
-   <a href="https://www.tumblr.com/pileofglass/708541131552669696/made-some-88x31-buttons-for-breakbeat-fans-feel?source=share" target="_blank"><img src="/collection/internet-graphics/!g/breakbeat.gif"></a>
-   <a href="https://www.tumblr.com/cartoonishvendor/710638657066926080/drippin-themed-88x31-buttons-middle-animation-is?source=share" target="_blank"><img src="/collection/internet-graphics/!g/drippin.gif"></a>
-   <img src="/collection/internet-graphics/!g/miku.gif">
-   <a href="https://plasticdino.neocities.org/graphics" target="_blank"><img src="/collection/internet-graphics/!g/loona.gif"></a>
-   <br>
-   <img src="/collection/internet-graphics/!g/ilovethemusic.gif" style="max-width:100%;" alt="i love the music">
-  </div>
-
-  <footer id="foot" class="box">
-   <img src="/collection/internet-graphics/!g/matry.gif" alt="matryoshka gumi" style="margin:15px 5px" align="left">
-   <img src="/collection/internet-graphics/!g/orka.gif" alt="matryoshka miku" style="margin:15px 5px" align="right">
-   last updated on 28.feb.25
-   <br>
-   <b>credit:</b>
-   bg is a scan from <a title="archive.org img link" href="https://archive.org/details/yume-no-manimani-scans/13-page.png" target="_blank">siinamota's yume no manimani</a> album booklet, art by <a title="meisa's website" href="http://hathune39.web.fc2.com/" target="_blank">meisa</a>
-
-   <br>
-
-   <span class="emoji2"></span> <a href="#">top</a> <span class="emoji2"></span> <a href="/">home</a> <span class="emoji2"></span> <a href="/sitemap.html">sitemap</a> <span class="emoji2"></span>
-  </footer>
-  <!-- wrapper end div -->
- </div>
- <script src="random-mv.js"></script>
+  <script src="random-mv.js"></script>
 </body>
 
 </html>
